<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Revolo</string>
    <string name="title_device">Devices</string>
    <string name="title_user">Invite</string>
    <string name="title_user_fragment">USER</string>
    <string name="title_mine">My</string>
    <string name="revolo">Revolo</string>
    <string name="tip_sign_select">Welcome to use revolo products to\n give you a safe and comfortable\n home</string>
    <string name="register">SIGN UP</string>
    <string name="title_finger_print_Login">FINGERPRINT</string>
    <string name="title_face_Login">FACE</string>
    <string name="tip_finger_print_login_text">Please log in via fingerprint</string>
    <string name="iv_tip_back">Back</string>
    <string name="hint_email_address">Email Address</string>
    <string name="hint_password">Password</string>
    <string name="create">Create</string>
    <string name="tip_please_register_your_account">Please register your account number</string>
    <string name="hint_verification_code">Verification code</string>
    <string name="i_agree_to">I agree to</string>
    <string name="terms_of_use">Service Agreement</string>
    <string name="terms_of_privacy">Privacy Policy</string>
    <string name="t_tip_password_rule">8-15 characters, including upper case letters, lower case letters and numbers.</string>
    <string name="tip_register_add_avatar">Customize your Avatar</string>
    <string name="album_add">Album add</string>
    <string name="photograph">Photograph</string>
    <string name="skip">Skip</string>
    <string name="next">Next</string>
    <string name="hint_first_name">First name</string>
    <string name="hint_last_name">Last name</string>
    <string name="tip_register_input_name">Please enter your name</string>
    <string name="add_device_qrcodestep2activity_title">SCAN QR CODE </string>
    <string name="tip_register_add_avatar_next">Revolo registration has been completed.</string>
    <string name="add_device">Add device</string>
    <string name="add_next_time">Next Time</string>
    <string name="ble_connectsuc_activity_view">PARING SUCCESS</string>
    <string name="ble_connectsuc_activity_fail_title">PARING FAIL</string>
    <string name="ble_connectsuc_activity_title_text">For more functional experience, please add door magnetism and WiFi.</string>
    <string name="add_device_step2_bleconnectactivity_title">PARING</string>
    <string name="add_device_step2_bleconnectactivity_hint_text">Your phone is Connecting to the lock through bluetooth, please wait.</string>
    <string name="add_device_activity_title">INSTALL LOCK</string>
    <string name="add_device_activity_title_2">INSTALL DOOR SENSOR</string>
    <string name="add_device_step1_hint_text">· Please make sure your lock is physically installed\n· Close your door and rotate the thumbturn to make sure the bolt work normally. If not please check your installation.</string>
    <string name="add_device_step1_hint_text_2">· Please make sure your Door Sensor is physically installed.</string>
    <string name="tip_login">Welcome Home</string>
    <string name="pin_key">PIN key</string>
    <string name="password">PASSWORD</string>
    <string name="input_email_address">Email Address</string>
    <string name="forgot_password">Forgot password</string>
    <string name="sign_up">Sign up</string>
    <string name="btn_login">Login</string>
    <string name="title_forget_the_pwd">FORGET THE PASSWORD</string>
    <string name="done">Done</string>
    <string name="get_code">Get code</string>
    <string name="verification_code">Verification code</string>
    <string name="complete">Complete</string>
    <string name="tip_btn_create">Create</string>
    <string name="tip_home_page">Welcome to use the\n Revolo smart door lock</string>
    <string name="title_my_devices">MY DEVICES</string>
    <string name="wfp01">WFP01</string>
    <string name="tip_add_device_tip">The door lock has been installed\nPlease ensure WiFi and Bluetooth are on.</string>
    <string name="enter_serial_number">Input Manually</string>
    <string name="turn_on_torch">Turn on Torch</string>
    <string name="please_scan_the_qr_code_on_the_back_panel_of_lock">Please scan the QR code located under the battery slot</string>
    <string name="t_please_input_product_esn">Please input product ESN</string>
    <string name="tip_enter_esn">Enter ESN</string>
    <string name="hint_please_enter_esn">Please enter ESN</string>
    <string name="title_enter_codes">Enter codes</string>
    <string name="input_esn_activity_title">INPUT MANUALLY</string>
    <string name="input_esn_activity_hint_text">· The ESN is located under the battery slot.</string>
    <string name="tip_notification">Notification</string>
    <string name="tip_activities">Activities</string>
    <string name="tip_user">User</string>
    <string name="tip_invite">Invite</string>
    <string name="tip_setting">Setting</string>
    <string name="tip_low_battery">Low battery</string>
    <string name="tip_online">Online</string>
    <string name="tip_private_mode">Private mode</string>
    <string name="tip_door_sensor_error">Door sensor closed</string>
    <string name="tip_door_opened">Door opened</string>
    <string name="tip_door_closed">Door closed</string>
    <string name="tip_door_error">State Error</string>
    <string name="tip_opened">Opened</string>
    <string name="tip_closed">Closed</string>
    <string name="tip_error">Error</string>
    <string name="tip_learn_more">Learn more</string>
    <string name="title_operation_records">ACTIVITIES</string>
    <string name="data_no_records">No record</string>
    <string name="dialog_title_notice">Notice</string>
    <string name="dialog_ble_content">The latest operation record cannot be obtained in Bluetooth mode,please switch the lock to wifi mode.</string>
    <string name="tip_you_can_set_4_10_valid_passwords">You can set 4&#8211;10 digital PIN Key</string>
    <string name="hint_please_enter_password">Please Enter New PIN Key</string>
    <string name="title_add_password">ADD PIN KEY</string>
    <string name="tip_add_password_select">Customize Your PIN Key</string>
    <string name="tip_add_password_name">Name Your PIN Key</string>
    <string name="select_permanent">Permanent</string>
    <string name="select_schedule">Schedule</string>
    <string name="select_temporary">Temporary</string>
    <string name="password_name">PIN Key Name</string>
    <string name="delete_password">Delete PIN Key</string>
    <string name="password_characteristic">PIN KEY Type</string>
    <string name="creation_date">Created Date</string>
    <string name="title_pwd_details">PIN KEY</string>
    <string name="tip_pwd_default_name">PIN Key %1s</string>
    <string name="tip_PIN_Key">PIN Key</string>
    <string name="name">New Name</string>
    <string name="please_enter_the_password_name">Please Enter the PIN Key Name</string>
    <string name="chang_pwd_name_activity_title">NAME YOUR LOCK</string>
    <string name="chang_lock_name_activity_name">New Name</string>
    <string name="chang_lock_name_activity_name_text">Give your Lock a nick name</string>
    <string name="title_change_the_name">CHANGE THE NAME</string>
    <string name="title_change_pwd_the_name">PIN KEY</string>
    <string name="add_init_pwd_next_ok">Setting succeeded</string>
    <string name="add_init_pwd_next_fail">Setting failed</string>
    <string name="add_init_pwd_next_hint">Add Later</string>
    <string name="title_user_management">USER LIST</string>
    <string name="per_unable_to_add_user">Unable to add user</string>
    <string name="per_unable_to_add_password">Unable to add password</string>
    <string name="per_app_unlock_only">· Able to lock and unlock door via Revolo App ONLY!</string>
    <string name="permission_family">（Family）</string>
    <string name="permission_guest">（Guest）</string>
    <string name="title_add_user">Add user</string>
    <string name="hint_please_enter_the_user_name">Please enter the user name</string>
    <string name="tip_add_user">Add user</string>
    <string name="tip_add_new_user">Add new user</string>
    <string name="title_authorization_management">ACCESS LEVEL</string>
    <string name="tip_invite_user">You are going to invite users to use this door lock</string>
    <string name="share">Share</string>
    <string name="family">Family</string>
    <string name="guest">Guest</string>
    <string name="delete">Delete</string>
    <string name="tip_remove">Remove</string>
    <string name="enable_user_authorization">Grant Account Authority</string>
    <string name="title_setting">LOCK SETTINGS</string>
    <string name="title_general_setting">GENERAL SETTINGS</string>
    <string name="device_setting_name">Device Name</string>
    <string name="device_setting_wifi">Wi-Fi Network</string>
    <string name="wifi">WiFi</string>
    <string name="auto_lock">Auto-Lock</string>
    <string name="geo_fence_lock">Auto-Unlock</string>
    <string name="device_setting_door_sensor">Door Sensor</string>
    <string name="door_sensor_alignment">Door sensor alignment</string>
    <string name="device_setting_duress">Emergency PIN Key</string>
    <string name="duress_password">Duress password</string>
    <string name="mute">Mute</string>
    <string name="private_mode">Private mode</string>
    <string name="join_alexa">Join Alexa</string>
    <string name="door_lock_information">Device Information</string>
    <string name="unbind">Unbind</string>
    <string name="do_not_disturb_mode">Do Not Disturb Mode</string>
    <string name="video_mode">Video mode</string>
    <string name="hint_please_enter_the_lock_name">Please enter the lock name</string>
    <string name="title_wifi_setting">WI-FI SETTING</string>
    <string name="wifi_setting_activity_name">Wi-Fi</string>
    <string name="setting_add_wifi">Add WiFi</string>
    <string name="setting_connected_wifi">Switch to Another Wi-Fi Network</string>
    <string name="setting_tip_to_connect_wifi_to_door_lock">To connect WiFi to door lock</string>
    <string name="save">Save</string>
    <string name="it_is_not_allowed_to_enter_two_911_and_above">It is not allowed to enter two 911 and above.</string>
    <string name="it_is_not_allowed_to_enter_911_before_correct_n_password">It is not allowed to enter 911 before correct\n password.</string>
    <string name="please_enter_the_email_address_to_receive_the_duress_password">Please Enter the Email Address you want to receive when in Emergency Situation.</string>
    <string name="account_cancellation_title">Gate magnet abnormal</string>
    <string name="account_cancellation_content">After logging off, all information and data of the device and account will be cleared.</string>
    <string name="cancellation">Cancellation</string>
    <string name="cancel">Cancel</string>
    <string name="dialog_btn_confirm">Confirm</string>
    <string name="dialog_title_add_failure">Add failure</string>
    <string name="dialog_tip_please_make_sure_wifi_is_online">▪Please make sure your router is functional.</string>
    <string name="dialog_tip_please_make_sure_the_bluetooth_is_connected">▪Please make sure the lock is within the range of the router\'sWIFI signal.</string>
    <string name="dialog_tip_please_make_sure_the_network_is_normal">▪Please make sure the WiFi account and  password are correct.</string>
    <string name="dialog_tip_after_unbinding_your_door_lock_can_be_binded_by_others">After unbinding,\nyour door lock can be bound by others.</string>
    <string name="dialog_title_are_you_sure_to_unbind">Are you sure to unbind the device?</string>
    <string name="dialog_tip_please_wake_up_lock_and_wait_bluetooth_connecting">Please wake up lock and wait Bluetooth connecting</string>
    <string name="dialog_title_weak_signal_state">Weak signal state</string>
</resources>