<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="289pt"
    android:layout_height="246pt"
    android:background="@drawable/shape_dialog_bg">

    <TextView
        android:id="@+id/textView57"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20pt"
        android:text="@string/dialog_title_add_failure"
        android:textColor="@color/c333333"
        android:textSize="16pt"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView56"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20pt"
        android:layout_marginRight="20pt"
        android:text="@string/dialog_tip_please_make_sure_wifi_is_online"
        android:textColor="@color/c333333"
        android:textSize="14pt"
        app:layout_constraintTop_toBottomOf="@+id/textView57" />

    <TextView
        android:id="@+id/textView59"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20pt"
        android:layout_marginTop="5pt"
        android:layout_marginRight="20pt"
        android:text="@string/dialog_tip_please_make_sure_the_bluetooth_is_connected"
        android:textColor="@color/c333333"
        android:textSize="14pt"
        app:layout_constraintTop_toBottomOf="@+id/textView56" />

    <TextView
        android:id="@+id/textView58"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20pt"
        android:layout_marginTop="5pt"
        android:layout_marginRight="20pt"
        android:text="@string/dialog_tip_please_make_sure_the_network_is_normal"
        android:textColor="@color/c333333"
        android:textSize="14pt"
        app:layout_constraintTop_toBottomOf="@+id/textView59" />

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="1pt"
        android:background="@color/cF2F2F2"
        app:layout_constraintBottom_toTopOf="@+id/tvConfirm"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvConfirm"
        android:layout_width="match_parent"
        android:layout_height="50pt"
        android:gravity="center"
        android:text="@string/dialog_btn_confirm"
        android:textColor="@color/c2C68FF"
        android:textSize="15pt"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>