<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/include11"
        layout="@layout/layout_title_bar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="41pt"
        android:layout_marginTop="31pt"
        android:text="@string/tip_enter_esn"
        android:textColor="@color/c333333"
        android:textSize="15pt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/include11" />

    <EditText
        android:id="@+id/etESN"
        style="@style/InputEditTextStyle"
        android:layout_width="300pt"
        android:layout_height="44pt"
        android:layout_marginTop="6pt"
        android:hint="@string/hint_please_enter_esn"
        android:importantForAutofill="no"
        android:inputType="text"
        android:textColorHint="@color/cA5A4DA"
        android:theme="@style/InputEditTextTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView17" />

    <TextView
        android:layout_width="300pt"
        android:layout_height="wrap_content"
        android:layout_marginTop="6pt"
        android:text="@string/input_esn_activity_hint_text"
        android:textColor="@color/c666666"
        android:textSize="14pt"
        app:layout_constraintEnd_toEndOf="@+id/etESN"
        app:layout_constraintStart_toStartOf="@+id/etESN"
        app:layout_constraintTop_toBottomOf="@+id/etESN" />

    <android.widget.Button
        android:id="@+id/btnNext"
        style="@style/ButtonStyle"
        android:layout_width="223pt"
        android:layout_height="44pt"
        android:layout_marginBottom="128pt"
        android:text="@string/next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>