<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/include14"
        layout="@layout/layout_title_bar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvTipName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="41pt"
        android:layout_marginTop="31pt"
        android:text="@string/chang_lock_name_activity_name"
        android:textColor="@color/c333333"
        android:textSize="15pt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/include14" />

    <EditText
        android:id="@+id/etLockName"
        style="@style/InputEditTextStyle"
        android:layout_width="300pt"
        android:layout_height="44pt"
        android:layout_marginTop="6pt"
        android:background="@drawable/bg_edit_under_line_selector"
        android:hint="@string/hint_please_enter_the_lock_name"
        android:inputType="textEmailAddress"
        android:maxLength="30"
        android:textColorHint="@color/cA5A4DA"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTipName" />

    <android.widget.Button
        android:id="@+id/btnComplete"
        style="@style/ButtonStyle"
        android:layout_width="223pt"
        android:layout_height="44pt"
        android:layout_marginBottom="128pt"
        android:text="@string/complete"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/btnCancel"
        android:layout_width="0dp"
        android:layout_height="32pt"
        android:layout_marginStart="76pt"
        android:layout_marginEnd="76pt"
        android:gravity="center"
        android:text="@string/skip"
        android:textSize="16pt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnComplete" />

</androidx.constraintlayout.widget.ConstraintLayout>