<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="289pt"
    android:layout_height="200pt"
    android:background="@drawable/shape_dialog_bg">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:gravity="center"
        android:text="@string/account_cancellation_title"
        android:textColor="@color/c333333"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvContent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="12pt"
        android:layout_marginTop="20pt"
        android:layout_marginEnd="12pt"
        android:gravity="center"
        android:text="@string/account_cancellation_content"
        android:textColor="@color/c333333"
        android:textSize="15sp"
        app:layout_constraintTop_toBottomOf="@id/tvTitle" />

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="1pt"
        android:background="@color/cF2F2F2"
        app:layout_constraintBottom_toTopOf="@+id/tvCancellation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvCancellation"
        android:layout_width="144pt"
        android:layout_height="50pt"
        android:gravity="center"
        android:text="@string/cancellation"
        android:textColor="@color/cA5A4DA"
        android:textSize="15pt"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <View
        android:layout_width="1pt"
        android:layout_height="50pt"
        android:background="@color/cF2F2F2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/tvCancel" />

    <TextView
        android:id="@+id/tvCancel"
        android:layout_width="144pt"
        android:layout_height="50pt"
        android:gravity="center"
        android:text="@string/cancel"
        android:textColor="@color/c2C68FF"
        android:textSize="15pt"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>