<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <include
        android:id="@+id/titleBar"
        layout="@layout/layout_title_bar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView39"
        android:layout_width="294pt"
        android:layout_height="wrap_content"
        android:layout_marginStart="41pt"
        android:layout_marginTop="31pt"
        android:textSize="15pt"
        android:textColor="@color/c333333"
        android:text="@string/please_enter_the_email_address_to_receive_the_duress_password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleBar" />

    <EditText
        android:id="@+id/etEmail"
        style="@style/InputEditTextStyle"
        android:layout_width="300pt"
        android:layout_height="44pt"
        android:hint="@string/hint_email_address"
        android:inputType="textEmailAddress"
        android:textColorHint="@color/cA5A4DA"
        android:theme="@style/InputEditTextTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView39" />

    <View
        android:id="@+id/vNum1"
        android:layout_width="5pt"
        android:layout_height="5pt"
        android:layout_marginStart="36pt"
        android:layout_marginTop="17pt"
        android:background="@drawable/shape_duress_serial_number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etEmail" />

    <View
        android:id="@+id/vNum2"
        android:layout_width="5pt"
        android:layout_height="5pt"
        android:layout_marginStart="36pt"
        android:layout_marginTop="11pt"
        android:background="@drawable/shape_duress_serial_number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/vNum1" />

    <android.widget.Button
        android:id="@+id/btnSave"
        style="@style/ButtonStyle"
        android:layout_width="223pt"
        android:layout_height="44pt"
        android:text="@string/save"
        android:layout_marginBottom="128pt"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView40"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="11pt"
        android:layout_marginTop="10pt"
        android:text="@string/it_is_not_allowed_to_enter_two_911_and_above"
        android:textColor="@color/c999999"
        android:textSize="12pt"
        app:layout_constraintStart_toEndOf="@+id/vNum1"
        app:layout_constraintTop_toBottomOf="@+id/etEmail" />

    <TextView
        android:id="@+id/textView41"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="11pt"
        android:text="@string/it_is_not_allowed_to_enter_911_before_correct_n_password"
        android:textColor="@color/c999999"
        android:textSize="12pt"
        app:layout_constraintStart_toEndOf="@+id/vNum1"
        app:layout_constraintTop_toBottomOf="@+id/textView40" />

</androidx.constraintlayout.widget.ConstraintLayout>